@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclProc.c,v 1.115.2.14 2007/11/12 19:18:20 dgp Exp $
+ * RCS: @(#) $Id: tclProc.c,v 1.115.2.15 2007/11/13 13:07:42 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -2218,7 +2218,6 @@ TclUpdateReturnInfo(
 	    iPtr->flags |= ERR_LEGACY_COPY;
 	}
     }
-    iPtr->flags |= INTERP_RESULT_UNCLEAN;
     return code;
 }
 
